# codelint

./: .gitignore  .yamllint.yml  README.md  example-black.py  example-black.py.txt  example.py  example.py.txt  example_black.py  playbook.yml  pyproject.toml  requirements.txt
.github/workflows/: linting-matrix.yml  linting.yml
custom_rules/: CapitalNamesRule.py
